--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,7 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
+
     <name>common</name>
     <url>http://maven.apache.org</url>
 
