--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>common</module>
         <module>common/common-util</module>
         <module>common/service-util</module>
+        <module>springsecurity</module>
     </modules>
 
     <properties>
@@ -65,11 +66,11 @@
         </dependency>-->
 
         <!--整合mybatis-->
-        <!--mybatis启动器-->
+        <!--mybatisplus-->
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.3</version>
         </dependency>
         <!--mysql驱动-->
         <dependency>
