--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-        <!--fastjson-->
+        <!--fastjson依赖-->
         <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
-            <version>2.0.26</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.33</version>
         </dependency>
 
         <!--文件上传-->
