--- a/service/pom.xml
+++ b/service/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.feidian</groupId>
+            <artifactId>springsecurity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
