refactor(security):给security起了个更正式的名字

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>common</module>
         <module>common/common-util</module>
         <module>common/service-util</module>
-        <module>springsecurity</module>
+        <module>security</module>
     </modules>
 
     <properties>
