--- a/service/pom.xml
+++ b/service/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>com.feidian</groupId>
-            <artifactId>springsecurity</artifactId>
+            <artifactId>security</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
