--- a/security/pom.xml
+++ b/security/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springsecurity</artifactId>
+    <artifactId>security</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
