--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>common</module>
         <module>common/common-util</module>
         <module>common/service-util</module>
+        <module>common/security</module>
     </modules>
 
     <properties>
